--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -4,7 +4,7 @@ body {
 /* Centered Image Code */
 
 .center {
- 
+  height: 500px;
   display: flex;
   align-items: center;
   justify-content: center;
