--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -4,8 +4,63 @@ body {
 /* Centered Image Code */
 
 .center {
-  height: 500px;
+  height: 250px;
   display: flex;
   align-items: center;
   justify-content: center;
+}
  
+.wordcenter{
+  height: auto;
+  text-align: center;
+  vertical-align: center;
+}
+
+
+/* fadeInUp */
+@-webkit-keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    -webkit-transform: translate3d(0, 50%, 0); }
+  100% {
+    opacity: 1;
+    -webkit-transform: none; } }
+@-moz-keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    -moz-transform: translate3d(0, 50%, 0); }
+  100% {
+    opacity: 1;
+    -moz-transform: none; } }
+@-o-keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    -o-transform: translate3d(0, 50%, 0); }
+  100% {
+    opacity: 1;
+    -o-transform: none; } }
+@keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    transform: translate3d(0, 50%, 0); }
+  100% {
+    opacity: 1;
+    transform: none; } }
+
+.u--fadeInUp {
+  -webkit-animation: fadeInUp 1s ease-in;
+  -moz-animation: fadeInUp 1s ease-in;
+  -o-animation: fadeInUp 5s ease-in;
+  animation: fadeInUp 1s ease-in; }
+
+  .Delayed_Fadein {
+    -webkit-animation: fadeInUp 1s ease-in;
+    -moz-animation: fadeInUp 1s ease-in;
+    -o-animation: fadeInUp 1.5s ease-in;
+    animation: fadeInUp 1.05s ease-in; }
+
+    .button_Fadein {
+      -webkit-animation: fadeInUp 1s ease-in;
+      -moz-animation: fadeInUp 1s ease-in;
+      -o-animation: fadeInUp 1s ease-in;
+      animation: fadeInUp 2s ease-in; }
