--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -64,3 +64,6 @@ body {
       -moz-animation: fadeInUp 1s ease-in;
       -o-animation: fadeInUp 1s ease-in;
       animation: fadeInUp 2s ease-in; }
+
+      /*________________________________________*/
+      
