--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -4,7 +4,7 @@ body {
 /* Centered Image Code */
 
 .center {
-  height: 250px;
+  height: center;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -17,53 +17,47 @@ body {
 }
 
 
-/* fadeInUp */
-@-webkit-keyframes fadeInUp {
+/* slideUp */
+@-webkit-keyframes slideUp {
   0% {
-    opacity: 0;
-    -webkit-transform: translate3d(0, 50%, 0); }
+    -webkit-transform: translate3d(0, 100%, 0); }
   100% {
-    opacity: 1;
     -webkit-transform: none; } }
-@-moz-keyframes fadeInUp {
+@-moz-keyframes slideUp {
   0% {
-    opacity: 0;
-    -moz-transform: translate3d(0, 50%, 0); }
+    -moz-transform: translate3d(0, 100%, 0); }
   100% {
-    opacity: 1;
     -moz-transform: none; } }
-@-o-keyframes fadeInUp {
+@-o-keyframes slideUp {
   0% {
-    opacity: 0;
-    -o-transform: translate3d(0, 50%, 0); }
+    -o-transform: translate3d(0, 100%, 0); }
   100% {
-    opacity: 1;
     -o-transform: none; } }
-@keyframes fadeInUp {
+@keyframes slideUp {
   0% {
-    opacity: 0;
-    transform: translate3d(0, 50%, 0); }
+    transform: translate3d(0, 100%, 0); }
   100% {
-    opacity: 1;
     transform: none; } }
 
-.u--fadeInUp {
-  -webkit-animation: fadeInUp 1s ease-in;
-  -moz-animation: fadeInUp 1s ease-in;
-  -o-animation: fadeInUp 5s ease-in;
-  animation: fadeInUp 1s ease-in; }
+.u--slideUp {
+  -webkit-animation: slideUp 1s;
+  -moz-animation: slideUp 1s;
+  -o-animation: slideUp 1s;
+  animation: slideUp 1s; }
 
-  .Delayed_Fadein {
-    -webkit-animation: fadeInUp 1s ease-in;
-    -moz-animation: fadeInUp 1s ease-in;
-    -o-animation: fadeInUp 1.5s ease-in;
-    animation: fadeInUp 1.05s ease-in; }
+  .Desc-slideUp {
+    -webkit-animation: slideUp 1s;
+    -moz-animation: slideUp 1s;
+    -o-animation: slideUp 1s;
+    animation: slideUp 1s; }
 
-    .button_Fadein {
-      -webkit-animation: fadeInUp 1s ease-in;
-      -moz-animation: fadeInUp 1s ease-in;
-      -o-animation: fadeInUp 1s ease-in;
-      animation: fadeInUp 2s ease-in; }
+    .Butt-slideUp {
+      -webkit-animation: slideUp 1s;
+      -moz-animation: slideUp 1s;
+      -o-animation: slideUp 1s;
+      animation: slideUp 1s; }
+
+
 
       /*________________________________________*/
       
