--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,5 +1,6 @@
 body {
   margin: auto;
+  background-color: blanchedalmond;
 }
 /* Centered Image Code */
 
@@ -13,6 +14,7 @@ body {
 .wordcenter{
   height: auto;
   text-align: center;
+  align-items: center;
   vertical-align: center;
 }
 
@@ -61,3 +63,50 @@ body {
 
       /*________________________________________*/
       
+      /*button Animation*/
+      @import url("https://fonts.googleapis.com/css?family=Roboto:100");
+* {
+  box-sizing: border-box;
+}
+
+
+.coolBeans {
+  border: 2px solid currentColor;
+  border-radius: 3rem;
+  /*color: rgb(255, 255, 255);*/
+  font-family: roboto;
+  font-size: 1rem;
+  font-weight: 100;
+  overflow: hidden;
+  padding: 1rem 2rem;
+  position: relative;
+  text-decoration: none;
+  transition: 0.2s transform ease-in-out;
+  will-change: transform;
+  z-index: 0;
+}
+.coolBeans::after {
+  background-color: rgb(180, 173, 167);
+  border-radius: 3rem;
+  content: '';
+  display: block;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  transform: translate(-100%, 0) rotate(10deg);
+  transform-origin: top left;
+  transition: 0.2s transform ease-out;
+  will-change: transform;
+  z-index: -1;
+}
+.coolBeans:hover::after {
+  transform: translate(0, 0);
+}
+.coolBeans:hover {
+  border: 2px solid transparent;
+  color: #4b0082;
+  transform: scale(1.05);
+  will-change: transform;
+}
